--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p><img id="pro_pic" src="image/happy-teachers-day-vector-illustration-260nw-1127269343.jpg"><span id="shine"></span></p>
     </div>
     <p id="name">Teacher's Day</p>
-    <p id="about">04/09/24</p>
+    <p id="about">Event Date: 04/09/24</p>
     <p id="bio">...An Event Dedicated to Teachers...<br>Made with ❤ by<br></p>
     <p id="f">
         <b id="followers">Council</b><small>●</small><b id="connections">IX - XII</b>
@@ -39,7 +39,7 @@
         <b><p class="crcl c3"></p><p class="crcl c2"></p><p class="crcl c1"></p></b>
     </a>
   </div>
-  <!--<p id="ri">Created By - Council Of 9th - 12th</p>-->
+  <!--<p id="ri">Created By - MrTech-AK</p>-->
 
 <script type="text/javascript" src="script.js"></script>
 </body>
